@@ -155,6 +155,8 @@ typedef enum
 {
   META_ACTION_DOUBLE_CLICK_TITLEBAR_TOGGLE_SHADE,
   META_ACTION_DOUBLE_CLICK_TITLEBAR_TOGGLE_MAXIMIZE,
+  META_ACTION_DOUBLE_CLICK_TITLEBAR_MINIMIZE,
+  META_ACTION_DOUBLE_CLICK_TITLEBAR_NONE,
   META_ACTION_DOUBLE_CLICK_TITLEBAR_LAST
 } MetaActionDoubleClickTitlebar;
 
