@@ -99,10 +99,11 @@
       <locale name="C">
          <short>Action on title bar double-click</short>
          <long>
-	  This option determines the effects of double-clicking on the
-	  title bar.  Current valid options are 'toggle_shade', which will
-	  shade/unshade the window, and 'toggle_maximize' which will
-	  maximize/unmaximize the window.
+           This option determines the effects of double-clicking on the
+           title bar.  Current valid options are 'toggle_shade', which will
+           shade/unshade the window, 'toggle_maximize' which will
+           maximize/unmaximize the window, 'minimize' which will minimize
+           the window, and 'none' which will not do anything.
          </long>
       </locale>
     </schema>
